tests/snapshots/insta_test__string_literal2-2.snap
---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: Declaration(
                Declaration {
                    ty_spec: Int,
                    init_declarator: Some(
                        InitDeclarator {
                            declarator: Declarator {
                                n_star: 0,
                                direct_declarator: Func(
                                    Ident(
                                        "printf",
                                    ),
                                    [
                                        Declaration {
                                            ty_spec: Char,
                                            init_declarator: Some(
                                                InitDeclarator {
                                                    declarator: Declarator {
                                                        n_star: 1,
                                                        direct_declarator: Ident(
                                                            "msg",
                                                        ),
                                                    },
                                                    initializer: None,
                                                },
                                            ),
                                            debug_info: DebugInfo {
                                                file_info: FileInfo {
                                                    file_name: "",
                                                    src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                                                },
                                                pos: Position {
                                                    n_char: 15,
                                                    n_line: 1,
                                                },
                                            },
                                        },
                                    ],
                                    false,
                                ),
                            },
                            initializer: None,
                        },
                    ),
                    debug_info: DebugInfo {
                        file_info: FileInfo {
                            file_name: "",
                            src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                        },
                        pos: Position {
                            n_char: 4,
                            n_line: 1,
                        },
                    },
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "",
                    src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                },
                pos: Position {
                    n_char: 4,
                    n_line: 1,
                },
            },
        },
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: Char,
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 1,
                                                    direct_declarator: Ident(
                                                        "msg",
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "",
                                                src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 4,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Assign(
                                            Expr {
                                                kind: LVar(
                                                    "msg",
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: FileInfo {
                                                        file_name: "",
                                                        src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                                                    },
                                                    pos: Position {
                                                        n_char: 8,
                                                        n_line: 5,
                                                    },
                                                },
                                            },
                                            Expr {
                                                kind: StrLit(
                                                    "Hello World",
                                                ),
                                                debug_info: DebugInfo {
                                                    file_info: FileInfo {
                                                        file_name: "",
                                                        src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                                                    },
                                                    pos: Position {
                                                        n_char: 14,
                                                        n_line: 5,
                                                    },
                                                },
                                            },
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "",
                                                src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 12,
                                                n_line: 5,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Func(
                                            "printf",
                                            [
                                                Expr {
                                                    kind: LVar(
                                                        "msg",
                                                    ),
                                                    debug_info: DebugInfo {
                                                        file_info: FileInfo {
                                                            file_name: "",
                                                            src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                                                        },
                                                        pos: Position {
                                                            n_char: 15,
                                                            n_line: 6,
                                                        },
                                                    },
                                                },
                                            ],
                                        ),
                                        debug_info: DebugInfo {
                                            file_info: FileInfo {
                                                file_name: "",
                                                src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                                            },
                                            pos: Position {
                                                n_char: 8,
                                                n_line: 6,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            debug_info: DebugInfo {
                file_info: FileInfo {
                    file_name: "",
                    src: "\n    int printf(char *msg);\n\n    int main() {\n        char *msg;\n        msg = \"Hello World\";\n        printf(msg);\n    }\n    ",
                },
                pos: Position {
                    n_char: 4,
                    n_line: 3,
                },
            },
        },
    ],
}
