tests/snapshots/insta_test__string_literal2.snap
---
source: tests/insta_test.rs
expression: tester.tokens().as_ref().unwrap()
---
[
    Token {
        kind: Type(
            Int,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 4,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "printf",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 1,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 14,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 15,
                n_line: 1,
            },
        },
    },
    Token {
        kind: BinOp(
            Star,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 20,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 21,
                n_line: 1,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 24,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Semi,
        pos: DebugInfo {
            pos: Position {
                n_char: 25,
                n_line: 1,
            },
        },
    },
    Token {
        kind: Type(
            Int,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 4,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Ident(
            "main",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 3,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 12,
                n_line: 3,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 13,
                n_line: 3,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Brace,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 15,
                n_line: 3,
            },
        },
    },
    Token {
        kind: Type(
            Char,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 4,
            },
        },
    },
    Token {
        kind: BinOp(
            Star,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 13,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 14,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Semi,
        pos: DebugInfo {
            pos: Position {
                n_char: 17,
                n_line: 4,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Eq,
        pos: DebugInfo {
            pos: Position {
                n_char: 12,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Str(
            "Hello World",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 14,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Semi,
        pos: DebugInfo {
            pos: Position {
                n_char: 27,
                n_line: 5,
            },
        },
    },
    Token {
        kind: Ident(
            "printf",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 8,
                n_line: 6,
            },
        },
    },
    Token {
        kind: OpenDelim(
            Paren,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 14,
                n_line: 6,
            },
        },
    },
    Token {
        kind: Ident(
            "msg",
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 15,
                n_line: 6,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Paren,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 18,
                n_line: 6,
            },
        },
    },
    Token {
        kind: Semi,
        pos: DebugInfo {
            pos: Position {
                n_char: 19,
                n_line: 6,
            },
        },
    },
    Token {
        kind: CloseDelim(
            Brace,
        ),
        pos: DebugInfo {
            pos: Position {
                n_char: 4,
                n_line: 7,
            },
        },
    },
    Token {
        kind: Eof,
        pos: DebugInfo {
            pos: Position {
                n_char: 4,
                n_line: 8,
            },
        },
    },
]
